# kalshi_bot

./: .env.example  .gitignore  KALSHI_AUTO_TRADING_BOT_GUIDE.md  README.md  pyproject.toml  setup.py
config/: settings.yaml
dashboard/: app.py
src/: __init__.py  config.py  main.py  types.py
src/api/: auth.py  binance_ws.py  kalshi_client.py  ws_client.py
src/backtest/: engine.py  replay.py  simulator.py
src/execution/: order_manager.py  order_poller.py  paper_settler.py  router.py  slippage.py
src/monitoring/: alerts.py  logging.py  metrics.py
src/portfolio/: ledger.py  pnl.py  positions.py
src/risk/: exposure.py  kill_switch.py  limits.py
src/storage/: models.py  repository.py
src/strategy/: exit_manager.py  fair_value.py  features.py  filters.py  kelly.py  ml_model.py  signals.py
src/training/: auto_retrainer.py  strategy_explorer.py  train_ml_strategy.py
tests/unit/: test_auto_retrainer.py  test_backtest.py  test_exit_manager.py  test_features.py  test_kelly.py  test_ledger.py  test_market_filter.py  test_ml_model.py  test_order_manager.py  test_repository.py  test_risk.py  test_strategy.py  test_train_ml_strategy.py  test_ws_client.py
